# DINOv3DemoOnWindowsDocker_v1

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
genetic_counseling/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup_and_run.bat  setup_and_run.sh
genetic_counseling/config/: config.yaml
genetic_counseling/config/llm/: gemma.yaml  llama3.yaml
genetic_counseling/config/prompt/: brca_patient.yaml  default_patient.yaml
genetic_counseling/src/: app.py  config_manager.py  llm_client.py
